# snake-arena

./: .dockerignore  .env.docker.example  .gitignore  AGENTS.md  DEPLOY.md  DOCKER.md  Dockerfile  README.md  docker-compose.yml  index.html  openapi.yaml  package-lock.json  package.json  render.yaml  start.sh  tailwind.config.ts
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  verify_api.py
backend/app/: auth.py  config.py  database.py  db_models.py  init_db.py  main.py  models.py
backend/app/routers/: auth.py  leaderboard.py  sessions.py
backend/app/services/: database.py  mock_db.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_leaderboard.py  test_sessions.py
backend/tests_integration/: conftest.py  test_auth_integration.py  test_leaderboard_integration.py  test_sessions_integration.py
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/src/: index.css
frontend/src/components/: SpectateView.tsx
frontend/src/lib/: api.ts  mockBackend.ts  types.ts
frontend/src/lib/__tests__/: aiPlayer.test.ts  gameLogic.test.ts  mockBackend.test.ts
frontend/src/pages/: Index.tsx  Spectate.tsx
src/: App.tsx
src/components/: AuthDialog.tsx  GameBoard.tsx  Leaderboard.tsx
src/lib/: aiPlayer.ts  gameLogic.ts
src/pages/: Game.tsx
